--- a/demo/index.html
+++ b/demo/index.html
@@ -44,7 +44,7 @@
 </div>
 
 <script src="./address.js"></script>
-<script src="./build/ajax-picker.min.js"></script>
+<script src="../build/ajax-picker.min.js"></script>
 
 <script>
   var picker = new AjaxPicker({
