--- a/demo/index.html
+++ b/demo/index.html
@@ -52,7 +52,7 @@
     tipText: ['省份', '城市', '区/县'],
     input: 'address-input',
     container: 'container',
-    renderFunc: [
+    renderArr: [
       function () {
         picker.render(province)
       } ,
